Moarr unit tests